# FM2GP-2025

./: .clang-format  .gitattributes  .gitignore  Links.md  READINGS.md  README.md  readings.md  ruff.toml
.github/: auto-assign-config.yml
.github/workflows/: auto-assign.yml
Code from Book/: 01_02_multiply1.cpp  02_00_multiply0.cpp  02_02_mult_acc0.cpp  02_05_mult_acc3.cpp  02_07_multiply2.cpp  03_02_mult_acc1.cpp  04_02_mult_acc2.cpp  06_02_mult_acc4.cpp  07_00_mult_acc4.cpp  07_01_multiply_accumulate.cpp  07_02_multiply_accumulate.cpp  08_02_multiply3.cpp  09_02_multiply4.cpp
Exercises/: README.md
Exercises/03/: Fibi.py  fibonacci_conor_hoekstra.bqn  fibonacci_conor_hoekstra.kap  shortest_path.kap
Exercises/03/conor_hoekstra/: README.md  fibonacci.bqn  fibonacci.ua  graph.py  shortest_path_conor_hoekstra.md
Exercises/03/jglara/: Cargo.toml  README.md  fib.q
Exercises/03/jglara/benches/: fibo_bench.rs
Exercises/03/jglara/src/: fibonacci.rs  lib.rs
Exercises/03/lesley_lai/: fibonacci.py
Exercises/03/ryan_sullivant/: Cargo.toml
Exercises/03/ryan_sullivant/examples/: fib.rs  fib_test.rs  poly_eval.rs  shortest_path.rs
Exercises/06/benzuckier/: polynomial_eval.py
Exercises/06/conor_hoekstra/: polynimal_eval.bqn
Exercises/06/geoangelotti/: go.mod  polynomial_evaluator.go  polynomial_evaluator_test.go
Exercises/06/jglara/: Cargo.toml  README.md  poly.q  shortest_path.q
Exercises/06/jglara/src/: lib.rs  (+2 more)
Exercises/06/spencer_comin/: shortest_path.ml
Exercises/rsa/conor_hoekstra/: conor_hoekstra.py
Exercises/rsa/ryan_sullivant/: Cargo.toml
(+5 files in other folders)
