[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4.0", features = ["rand"] }
rand = "0.8.0"
num-traits = "0.2.14"

[dev-dependencies]
quickcheck = "1.0.3"
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "fibo_bench"
harness = false

